--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,9 +1,12 @@
+@import 'normalize';
+@include normalize();
 @import 'var';
+@import "font";
+@import "default";
 
-@include font(Roboto, 400);
-@include font(Roboto, 700);
-@include font(Roboto, 900);
+@import "block/header";
+@import "block/library";
+@import "block/cart";
+@import "block/book";
 
-body {
-  font-family: Roboto, sans-serif;
-}
+@import "block/footer";
