--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -1,7 +1,7 @@
 html {
   position: relative;
   box-sizing: border-box;
-  min-width: 360px;
+  //min-width: 320px;
 }
 
 *,
@@ -29,6 +29,10 @@ body {
 img {
   max-width: 100%;
   height: auto;
+}
+
+input, button, textarea {
+  font: inherit;
 }
 
 button {
@@ -76,8 +80,19 @@ iframe {
   max-width: 1100px;
   padding: 0 20px;
   margin: 0 auto;
+  @include tablet {
+    padding: 0 35px;
+  }
+
+  @include laptop {
+    padding: 0 45px;
+  }
 }
 
 .hidden {
   display: none;
+}
+
+section {
+  padding-bottom: 80px;
 }
