--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -9,6 +9,24 @@ $primaryDark: #AEAAAA;
 $secondary: #EAEAEA;
 $secondaryDark: #6B6B6B;
 
+@mixin tablet {
+  @media (min-width: 768px) {
+  @content
+  }
+}
+
+@mixin laptop {
+  @media (min-width: 1024px) {
+  @content
+  }
+}
+
+@mixin desktop {
+  @media (min-width: 1280px) {
+  @content
+  }
+}
+
 @mixin font($name, $weight) {
   @font-face {
     font: {
