--- a/src/scss/block/_library.scss
+++ b/src/scss/block/_library.scss
@@ -1,6 +1,23 @@
 .library {
   &__header {
+    position: relative;
     margin-bottom: 15px;
+
+    &:before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 174px;
+      height: 174px;
+      left: -66px;
+      top: -63px;
+      background-color: #FF0000;
+      filter: blur(200px);
+      z-index: 1;
+      @include tablet {
+        content: none;
+      }
+    }
   }
 
   &__titles{
@@ -31,8 +48,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 15px 26px;
+    max-width: 780px;
   }
-
 
   &__add-btn {
     background-color: transparent;
@@ -40,5 +57,11 @@
     width: 44px;
     height: 44px;
     color: $primary;
+  }
+
+  &__footer {
+    @include tablet {
+      display: none;
+    }
   }
 }
