--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,9 @@
 @import "block/header";
 @import "block/library";
 @import "block/cart";
+@import "block/_fields";
 @import "block/book";
+
+@import "block/_search";
 
 @import "block/footer";
