--- a/src/scss/block/_book.scss
+++ b/src/scss/block/_book.scss
@@ -1,23 +1,11 @@
 .book {
-  height: 100vh;
-  background-image: url("../img/ellipse.svg");
-  background-repeat: no-repeat;
-
-  @media (max-width: 1024px) {
-    background-position: center;
-    background-size: 100%;
-  }
-  @media (min-width: 1024px) {
-    background-position: left;
-    background-position-y: 100%;
-  }
 
   &__header {
-    margin-bottom: 15px;
+    margin-bottom: 16px;
   }
 
   &__container {
-    @media (min-width: 1024px) {
+    @include laptop {
      display: flex;
       gap: 50px;
     }
@@ -28,18 +16,15 @@
     margin-right: auto;
     flex-shrink: 0;
     margin-bottom: 20px;
-
-    @media (max-width: 768px) {
     width: 168px;
-    height: 250px;
-    }
-    @media (min-width: 768px) and (max-width: 1024px) {
+
+    @include tablet {
       width: 300px;
-      height: 450px;
+      //height: 450px;
     }
-    @media (min-width: 1024px) {
+    @include laptop {
       width: 249px;
-      height: 371px;
+      //height: 371px;
     }
   }
 
@@ -49,36 +34,40 @@
     object-fit: cover;
     border-radius: 6px;
   }
-  &__content {
 
+  &__content {
+    color: $light;
   }
+
   &__title {
     font-weight: 700;
     font-size: 26px;
     line-height: 32px;
-
     margin-bottom: 4px;
   }
+
   &__author {
     font-weight: 400;
     font-size: 14px;
     line-height: 120%;
-    margin: 4px 0px;
     color: $secondary;
   }
+
   &__rating {
     display: flex;
-    margin: 18px 0px;
+    margin: 18px 0;
   }
+
   &__rating-star {
     display: block;
-    width: 18px;
-    height: 18px;
-    margin-right: 1px;
+    width: 30px;
+    height: 30px;
+    margin-right: 7px;
     &:last-child {
       margin-right: 0;
     }
   }
+
   &__subtitle {
     font-weight: 500;
     font-size: 12px;
@@ -89,7 +78,7 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 130%;
-    margin: 4px 0px;;
+    margin: 4px 0;;
   }
 
   &__label {
@@ -103,27 +92,24 @@
     line-height: 100%;
     text-align: center;
     border-radius: 30px;
-  }
+    background-color: $light;
+    border: none;
 
-  .footer {
-    @media (min-width: 1024px) {
+    &_hidden {
       display: none;
-    }
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+      position: absolute;
+      width: 249px;
+      height: 50px;
 
+        @include laptop {
+         display: block;
+        }
+      }
+    }
   }
 
-  &__hidden_label {
-    @media (max-width: 1024px) {
-      display: none;
-    }
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    position: absolute;
-    width: 249px;
-    height: 50px;
-  }
 
-}
