--- a/src/scss/block/_footer.scss
+++ b/src/scss/block/_footer.scss
@@ -7,4 +7,17 @@
   width: 100%;
   height: 74px;
   background-color: $dark;
+  right: 0;
+  padding: 0 20px;
+
+  @media (max-height: 500px) {
+    width: auto;
+    right: 0;
+    padding: 20px;
+    background-color: transparent;
+  }
+
+  @include laptop {
+    display: none;
+  }
 }
