--- a/src/scss/block/_header.scss
+++ b/src/scss/block/_header.scss
@@ -1,6 +1,14 @@
 .header {
   padding: 8px 0;
 
+  @include tablet {
+    padding: 20px 0 15px;
+  }
+
+  @include desktop {
+    padding: 30px 0 25px;
+  }
+
   &__container {
     display: flex;
     align-items: center;
@@ -8,11 +16,36 @@
   }
 
   &__logo {
-    height: 35px;
+    height: 40px;
+    margin-right: auto;
+
+    @include laptop {
+      height: 66px;
+    }
   }
 
   &__btn-add {
     display: none;
+
+    @include laptop {
+      display: block;
+      width: 320px;
+      height: 50px;
+      font-size: 14px;
+      line-height: 100%;
+      color: $light;
+      background: $primary;
+      border-radius: 8px;
+      border: 0;
+      margin-right: 102px;
+    }
+
+  }
+
+  &__btn-hide {
+    @include laptop {
+      display: none;
+    }
   }
 
   &__btn {
@@ -22,7 +55,7 @@
     background-repeat: no-repeat;
     background-color: transparent;
     border: 0;
-    background-position: center right;
+    background-position: left;
   }
 
   &__btn_search {
@@ -30,6 +63,7 @@
   }
 
   &__btn_back {
+    background-position: left;
     background-image: url("../img/back.svg");
   }
 
