--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,6 +9,10 @@
 @import "block/cart";
 @import "block/_fields";
 @import "block/book";
+@import "block/add";
+@import "block/upload";
+@import "block/status";
+@import "block/star";
 
 @import "block/_search";
 
