--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -12,6 +12,9 @@ html {
 
 body {
   min-height: 100vh;
+}
+
+.body {
   font-family: Montserrat, sans-serif;
   /* указать шрифт под проект*/
   font-size: 12px;
@@ -24,6 +27,10 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   line-height: 1.2;
+}
+
+.body_gradient {
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%), url("../img/fire.svg");
 }
 
 img {
@@ -95,4 +102,14 @@ iframe {
 
 section {
   padding-bottom: 80px;
+}
+
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.no-valid {
+  outline: 3px solid tomato;
 }
