--- a/src/scss/block/_upload.scss
+++ b/src/scss/block/_upload.scss
@@ -18,5 +18,12 @@
     background-size: cover;
     cursor: pointer;
     border-radius: 6px;
+
+    &_active {
+      background-image: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
